@startuml


package existing #DDDDDD {
    class GolemNetworkToken {
        migrationAgent
    }
}

package "new contracts" {

    GolemNetworkToken - GNTMigrationAgent

    interface MigrationAgent {
        migrateFrom(from, value)
    }

    class Ownable {
      transferOwnership(address newOwner)
      renounceOwnership()
    }

    class GNTMigrationAgent {
        target: NewGolemNetworkToken
    }

    GNTMigrationAgent -> NewGolemNetworkToken : mints
    GNTMigrationAgent <|-- MigrationAgent
    GNTMigrationAgent <|-- Ownable

    class ERC20Mintable {
    }

    class NewGolemNetworkToken {
        approveBySignature()
    }

    NewGolemNetworkToken <|-- ERC20Mintable
}

@enduml
